2007-10-25 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: don't import RelLib

2007-10-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins.py/rel_xx.py: return order of get_relationship_distance
	changed. Not for pt, there that method is inherited.

2007-10-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: collapse parents same family in one line
	* src/Relationship.py: change no parent family code

2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: internationalization of a string

2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/RelCalc.py: better comment, issue #1181

2007-10-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: new algorithm to calculate relation
	* src/plugins/all_relations.py: begin of quick report to show extended relationship.

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_GalleryTab.py: correctly update displaytab

2007-10-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py: xml load/save not working, fixed #1319

2007-10-22  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_MenuOptions.py: Refactored options, GEPS #005

2007-10-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: select first/last marriage for maiden name

2007-10-21 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: during rebuild, don't do select change
	* src/DisplayTabs/_NoteTab.py: connect db note changes so tab updates
	* src/DisplayTabs/_ButtonTab.py: avoid double call of selection_change
	* src/DisplayTabs/_GrampsTab.py: method to add db connects, and set connects
	* src/Editors/_EditPrimary.py: on add tab pass db connection method
	* src/Editors/_EditSecondary.py: on add tab pass db connection method